new branch created

--- a/about.html
+++ b/about.html
@@ -54,17 +54,26 @@
       
       <section id="latestUpdates">
         <h2>Latest Updates</h2>
-        <article>
+
+        <nav id="secondaryNav">
+          <ul>
+            <li><a href="#update1">Goto Update 1</a></li>
+            <li><a href="#update2">Goto Update 2</a></li>
+            <li><a href="#update3">Goto Update 3</a></li>
+          </ul>
+        </nav>
+
+        <article id="update1">
           <h3>Launched Same Day Delivery in 20+ Cities</h3>
           <p title="Excerpt from the Blog Post">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa blanditiis animi cum unde magnam eligendi nesciunt deserunt, officiis veniam a natus itaque iste assumenda quos dolore adipisci necessitatibus similique eius!</p>
           <a href="#">Read more...</a>
         </article>
-        <article>
+        <article id="update2">
           <h3>How we delivered Million packages during Holidays?</h3>
           <p title="Excerpt from the Blog Post">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa blanditiis animi cum unde magnam eligendi nesciunt deserunt, officiis veniam a natus itaque iste assumenda quos dolore adipisci necessitatibus similique eius!</p>
           <a href="#">Read more...</a>
         </article>
-        <article>
+        <article id="update3">
           <h3>Launched TV App!</h3>
           <p title="Excerpt from the Blog Post">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa blanditiis animi cum unde magnam eligendi nesciunt deserunt, officiis veniam a natus itaque iste assumenda quos dolore adipisci necessitatibus similique eius!</p>
           <a href="#">Read more...</a>
