--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <meta name="keywords" content="online shopping, ikart shopping, ikart,
      ecommerce, e-com, quick commerce, the best shopping site india">
 
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;800&display=swap" rel="stylesheet"> -->
+
     <!-- Linking External Styles -->
     <link rel="stylesheet" href="./assets/styles/main.css">
     
@@ -93,7 +97,7 @@
 
     <footer>
       <hr>
-      <p>&copy; 2022 Copyright  | Arun</p>
+      <p>&copy; 2022 Copyright | Arun</p>
     </footer>
 
   </body>
