--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
 
     <main>
       <section id="jumbotron">
-        <!-- Inline Styles -->
-        <h1 style="color: red; background-color: yellow;">Same Day Delivery!</h1>
+        
+        <h1>Same Day Delivery!</h1>
         <p id="appDesc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa maxime, aliquid repellat, fugiat consectetur nemo sunt quibusdam ipsam, laudantium voluptatem minus. Eaque laboriosam recusandae beatae minus consequuntur molestias est corporis.</p>
+        <!-- Inline Styles -->
         <button type="button" style="font-size: 20px;">Browse 1000+ Products</button>
       </section>
 
