--- a/cart.html
+++ b/cart.html
@@ -22,11 +22,13 @@
   <body>
 
     <header>  
-      <a href="./index.html">
-        <img src="./assets/images/iKart-Logo.png" alt="iKart Logo">
-      </a>
+      <div class="appLogoBox">
+        <a href="./index.html">
+          <img src="./assets/images/iKart-Logo.png" alt="iKart Logo" width="64" height="64">
+        </a>
+      </div>
 
-      <nav>
+      <nav class="primaryNav">
         <ul>
           <li><a href="./index.html">Home</a></li>
           <li><a href="./products.html">Browse Products</a></li>
@@ -35,9 +37,8 @@
           <li><a href="./cart.html">Cart(0)</a></li>
         </ul>
       </nav>
-      <hr>
     </header>
-
+    
     <main>
       <h1>Items in Cart</h1>
       <table>
