--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
         </ul>
       </nav>
 
-      <hr>
     </header>
 
     <main>
@@ -72,22 +71,22 @@
         <button type="button" style="font-size: 20px;">Browse 1000+ Products</button>
       </section>
 
-      <section id="feature">
-        <div id="cities">
+      <section id="featureWrapper">
+        <div id="cities" class="featureBox">
           <img src="./assets/images/city.png" alt="Serving 200 Cities">
           <h2>Serving 200 Cities!!!!</h2>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
           <a href="#">View Details..</a>
         </div>
 
-        <div id="cod">
+        <div id="cod" class="ml5 featureBox">
           <img src="./assets/images/cod.png" alt="Cash on Delivery">
           <h2>Accepting COD</h2>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
           <a href="#">View Details...</a>
         </div>  
         
-        <div id="selling">
+        <div id="selling" class="ml5 featureBox">
           <img src="./assets/images/sales.png" alt="Selling 1000+ products / sec">
           <h2>Selling 1000+ products / sec</h2>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
