--- a/about.html
+++ b/about.html
@@ -16,12 +16,13 @@
   <body>
 
     <header>  
-      <a href="./index.html">
-        <img src="./assets/images/iKart-Logo.png" alt="iKart Logo">
-      </a>
+      <div class="appLogoBox">
+        <a href="./index.html">
+          <img src="./assets/images/iKart-Logo.png" alt="iKart Logo" width="64" height="64">
+        </a>
+      </div>
 
-      <!-- TODO: Align the menus to be in one line-->
-      <nav>
+      <nav class="primaryNav">
         <ul>
           <li><a href="./index.html">Home</a></li>
           <li><a href="./products.html">Browse Products</a></li>
@@ -30,11 +31,10 @@
           <li><a href="./cart.html">Cart(0)</a></li>
         </ul>
       </nav>
-      <hr>
     </header>
 
     <main>
-      <section id="aboutUs">
+      <section id="aboutUs" >
         <h1 class="aboutUsText">About Us</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt eum inventore accusantium porro eveniet voluptatem harum voluptatibus. Illo asperiores possimus eveniet, nam consequatur nesciunt repellendus officia. At, iure! Natus, doloremque? </p>
         <video width="500" height="300" controls>
