--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         </a>
       </div>
 
+      <img src="assets/icons/hamburger.png" class="menuCollapsed" width="32" height="32" alt="Menu Collapsed">
       <nav class="primaryNav">
         <ul>
           <li><a href="./index.html">Home</a></li>
@@ -79,14 +80,14 @@
           <a href="#">View Details..</a>
         </div>
 
-        <div id="cod" class="ml5 featureBox">
+        <div id="cod" class="featureBox">
           <img src="./assets/images/cod.png" alt="Cash on Delivery">
           <h2>Accepting COD</h2>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
           <a href="#">View Details...</a>
         </div>  
         
-        <div id="selling" class="ml5 featureBox">
+        <div id="selling" class="featureBox">
           <img src="./assets/images/sales.png" alt="Selling 1000+ products / sec">
           <h2>Selling 1000+ products / sec</h2>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
