--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>iKart - The Best Online Shopping App!</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- Initial Zoom level and width=device-width part sets the width of the page to follow the screen-width of the device -->
+    <!-- Initial Zoom level 
+      and width=device-width part sets the width of the page to follow the screen-width of the device -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Home Page of iKart - We ....">
     <meta name="keywords" content="online shopping, ikart shopping, ikart,
